--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>337 Tagged Open Ruby Bugs as of 2021-06-19 04:19:42 +0900</title>
+<title>335 Tagged Open Ruby Bugs as of 2021-06-19 08:50:17 +0900</title>
 <link rel="stylesheet"  href="app.css" />
 </head>
 <body>
@@ -12,8 +12,8 @@
 <input type="submit" value="ractor" />
 <input type="submit" value="lib" />
 <input type="submit" value="ext" />
-<input type="submit" value="notbug" />
 <input type="submit" value="os/arch" />
+<input type="submit" value="notbug" />
 <input type="submit" value="thread" />
 <input type="submit" value="test" />
 <input type="submit" value="encoding" />
@@ -33,9 +33,9 @@
 <input type="submit" value="misc" /></p>
 <label for="filter">Filter Tags:</label>
 <input id="filter" type="text" size="80" />
-(<span id="matched">337</span> matched)
+(<span id="matched">335</span> matched)
 <table>
-<caption>337 Tagged Open Ruby Bugs as of 2021-06-19 04:19:42 +0900</caption>
+<caption>335 Tagged Open Ruby Bugs as of 2021-06-19 08:50:17 +0900</caption>
 <thead>
 <tr class=" Tags ">
 <th>Bug ID</th>
@@ -1521,13 +1521,6 @@
 <td><a href="https://bugs.ruby-lang.org/issues/14387">Ruby 2.5 を Alpine Linux で実行すると比較的浅めで SystemStackError 例外になる</a>
 </td>
 </tr>
-<tr class=" win notbug ">
-<td><a href="https://bugs.ruby-lang.org/issues/14378">14378</a>
-</td>
-<td>win notbug</td>
-<td><a href="https://bugs.ruby-lang.org/issues/14378">On windows, RUBY_FIXNUM_MAX of 64 bits ruby  is 32 bits</a>
-</td>
-</tr>
 <tr class=" core ">
 <td><a href="https://bugs.ruby-lang.org/issues/14364">14364</a>
 </td>
@@ -1725,13 +1718,6 @@
 </td>
 </tr>
 <tr class=" core ">
-<td><a href="https://bugs.ruby-lang.org/issues/12547">12547</a>
-</td>
-<td>core</td>
-<td><a href="https://bugs.ruby-lang.org/issues/12547">Remove ONIG_UNICODE_VERSION_... in enc/unicode/case-folding.rb, casefold.h</a>
-</td>
-</tr>
-<tr class=" core ">
 <td><a href="https://bugs.ruby-lang.org/issues/12540">12540</a>
 </td>
 <td>core</td>
@@ -1787,10 +1773,10 @@
 <td><a href="https://bugs.ruby-lang.org/issues/12440">make test-all is not working on cygwin</a>
 </td>
 </tr>
-<tr class=" win core ">
+<tr class=" patch win core ">
 <td><a href="https://bugs.ruby-lang.org/issues/12436">12436</a>
 </td>
-<td>win core</td>
+<td>patch win core</td>
 <td><a href="https://bugs.ruby-lang.org/issues/12436">newline argument of File.open seems not respected on Windows</a>
 </td>
 </tr>
