--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>309 Tagged Open Ruby Bugs as of 2021-07-07 00:50:00 +0900</title>
+<title>309 Tagged Open Ruby Bugs as of 2021-07-09 08:26:15 +0900</title>
 <link rel="stylesheet"  href="app.css" />
 </head>
 <body>
@@ -13,8 +13,8 @@
 <input type="submit" value="ext" />
 <input type="submit" value="lib" />
 <input type="submit" value="os/arch" />
-<input type="submit" value="thread" />
 <input type="submit" value="test" />
+<input type="submit" value="thread" />
 <input type="submit" value="notbug" />
 <input type="submit" value="cygwin" />
 <input type="submit" value="encoding" />
@@ -35,7 +35,7 @@
 <input id="filter" type="text" size="80" />
 (<span id="matched">309</span> matched)
 <table>
-<caption>309 Tagged Open Ruby Bugs as of 2021-07-07 00:50:00 +0900</caption>
+<caption>309 Tagged Open Ruby Bugs as of 2021-07-09 08:26:15 +0900</caption>
 <thead>
 <tr class=" Tags ">
 <th>Bug ID</th>
@@ -44,6 +44,20 @@
 </tr>
 </thead>
 <tbody>
+<tr class=" encoding ">
+<td><a href="https://bugs.ruby-lang.org/issues/18028">18028</a>
+</td>
+<td>encoding</td>
+<td><a href="https://bugs.ruby-lang.org/issues/18028">test/ruby/enc/test_emoji_breaks.rb does not deal with Unicode ranges in file emoji-sequences.txt</a>
+</td>
+</tr>
+<tr class=" encoding ">
+<td><a href="https://bugs.ruby-lang.org/issues/18027">18027</a>
+</td>
+<td>encoding</td>
+<td><a href="https://bugs.ruby-lang.org/issues/18027">test/ruby/enc/test_emoji_breaks.rb does not use the file emoji-variation-sequences.txt</a>
+</td>
+</tr>
 <tr class=" ractor ">
 <td><a href="https://bugs.ruby-lang.org/issues/18024">18024</a>
 </td>
@@ -170,18 +184,11 @@
 <td><a href="https://bugs.ruby-lang.org/issues/17989">Case insensitive Regexps do not handle characters with overlapping case foldings</a>
 </td>
 </tr>
-<tr class=" core ">
-<td><a href="https://bugs.ruby-lang.org/issues/17984">17984</a>
-</td>
-<td>core</td>
-<td><a href="https://bugs.ruby-lang.org/issues/17984">[BUG] try to mark T_NONE object </a>
-</td>
-</tr>
 <tr class=" build win ">
 <td><a href="https://bugs.ruby-lang.org/issues/17931">17931</a>
 </td>
 <td>build win</td>
-<td><a href="https://bugs.ruby-lang.org/issues/17931">Compile fails on windows setup option nodynamic</a>
+<td><a href="https://bugs.ruby-lang.org/issues/17931">Compile fails setup option nodynamic</a>
 </td>
 </tr>
 <tr class=" os/arch ">
@@ -1043,13 +1050,6 @@
 </td>
 <td>win</td>
 <td><a href="https://bugs.ruby-lang.org/issues/15550">Windows - gem bin files - can&#39;t run from bash shell</a>
-</td>
-</tr>
-<tr class=" thread ">
-<td><a href="https://bugs.ruby-lang.org/issues/15509">15509</a>
-</td>
-<td>thread</td>
-<td><a href="https://bugs.ruby-lang.org/issues/15509">TCPServer#accept isn&#39;t interrupted</a>
 </td>
 </tr>
 <tr class=" thread ">
